Closed Bug 1743023 Opened 2 years ago Closed 2 years ago

RLBoxSandboxPool ISupports should be threadsafe

Categories

(Core :: Security: RLBox, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: deian, Assigned: deian)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Summary: RLBoxSandboxPool isupports should be threadsafe → RLBoxSandboxPool ISupports should be threadsafe
Attachment #9252533 - Attachment is obsolete: true

For woff2 we were seeing some crashes because I didn't use NS_DECL_THREADSAFE_ISUPPORTS

Pushed by bholley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7c628b7a716f
Make RLBoxSandboxPool ISupports threadsafe r=bholley
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Blocks: 1758626
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: