Bug 1743023 - Make RLBoxSandboxPool ISupports threadsafe r=bholley

Differential Revision: https://phabricator.services.mozilla.com/D132180