xpcom/base/RLBoxSandboxPool.h
@@ -34,7 +34,7 @@ class RLBoxSandboxPoolData;
 // sandbox-specific details.
 class RLBoxSandboxPool : public nsITimerCallback, public nsINamed {
  public:
-  NS_DECL_ISUPPORTS
+  NS_DECL_THREADSAFE_ISUPPORTS
   NS_DECL_NSITIMERCALLBACK
   NS_DECL_NSINAMED
 
